Bringing everything in sync with V1

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -46,10 +46,10 @@
                             <p>Semi Finals: July 10th - 08:00AM EST</p>
                             <p>Third Place & Finals: July 14th - 08:00AM EST</p>
                             <strong>Group Stage Scoring</strong><br>
-                            <p>Correctly predict group winner: 10 pts</p>
-                            <p>Correctly predict group runner-up: 10 pts</p>
-                            <p>Correctly predict a top two team in wrong position: 5 pts</p>
-                            <p>Correctly predict the entire group in the correct order: 15 pts</p>
+                            <p>Correctly predict group winner: +10 pts</p>
+                            <p>Correctly predict group runner-up: +10 pts</p>
+                            <p>Correctly predict a top two team in wrong position: +5 pts</p>
+                            <p>Correctly predict the entire group in the correct order: +15 pts</p>
                             <strong>Knockout Stage Scoring</strong><br>
                             <p>For each correct team in the 2nd round: 20 pts</p>
                             <p>For each correct team + correct score in the Quarter Finals: 30 pts + 10 pts</p>
