--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,4 +1,4 @@
-<!-- views/login.ejs -->
+<!-- views/reset.ejs -->
 <!doctype html>
 <html>
     <head>
@@ -14,36 +14,35 @@
     <body>
         <div class="container">
             <div class="col-sm-6 col-sm-offset-3">
-                <h1><span class="fa fa-sign-in"></span> Login</h1>
+                <h1><span class="fa fa-sign-in"></span> Password Reset</h1>
                 
                 <!-- show any messages that come back with authentication -->
                 <% if (message.length > 0) { %>
                 <div class="alert alert-danger"><%= message %></div>
                 <% } %>
                 
-                <!-- LOGIN FORM -->
-                <form action="/login" method="post">
+                <!-- PASSWORD RESET FORM -->
+                <form action="/passwordReset" method="post">
                     <div class="form-group">
                         <label>Email</label>
                         <input type="text" class="form-control" name="email">
                     </div>
                     <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" class="form-control" name="password">
+                        <label>Secret Key</label>
+                        <input type="text" class="form-control" name="secretkey">
                     </div>
                     <div class="form-group">
-                        <label>Remember Me</label>
-                        <input type="checkbox" class="form-control" name="remember" value="yes">
+                        <label>New Password</label>
+                        <input type="password" class="form-control" name="password">
                     </div>
-                    
-                    <button type="submit" class="btn btn-warning btn-lg">Login</button>
+                    <button type="submit" class="btn btn-warning btn-lg">Reset</button>
                 </form>
                 
                 <hr>
                 
                 <p>Need an account? <a href="/signup">Signup</a></p>
                 <p>Or go <a href="/">home</a>.</p>
-                <p>Or <a href='/resetPassword'>Reset password</a></p>
+                <p>Or <a href='/login'>Login</a></p>
             </div>
         </div>
     </body>
