All changes needed tor future knockout rounds

--- a/views/knockoutSemis.html
+++ b/views/knockoutSemis.html
@@ -30,6 +30,6 @@
             <main id="tournament" class='tournament'></main>
             <main id='finals' class='tournament'></main>
         </div>
-        <script src='../views/knockout.js'></script>
+        <script src='../views/knockoutSemis.js'></script>
     </body>
 </html>
