--- a/views/knockoutQuarters.html
+++ b/views/knockoutQuarters.html
@@ -30,6 +30,6 @@
             <main id="tournament" class='tournament'></main>
             <main id='finals' class='tournament'></main>
         </div>
-        <script src='../views/knockout.js'></script>
+        <script src='../views/knockoutQuarters.js'></script>
     </body>
 </html>
